versioned_docs/version-8.2/apis-tools/tasklist-api-rest/schemas/requests/task-search-request.mdx
---
id: task-search-request
title: TaskSearchRequest
hide_table_of_contents: false
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

TaskSearchRequest - query object to search tasks by provided params.

<Tabs groupId="schema" defaultValue="schema" values={
[
{label:'Schema',value: 'schema'},
{label:'Example value',value: 'example'}
]
}>
<TabItem value='schema'>

```graphql
{
    "state": TaskState,
    "assigned": boolean,
    "assignee": string,
    "taskDefinitionId": string,
    "candidateGroup": string,
    "candidateUser": string,
    "processDefinitionKey": string,
    "processInstanceKey": string,
    "pageSize": int,
    "followUpDate": DateFilter,
    "dueDate": DateFilter,
    "sort": [TaskOrderBy],
    "searchAfter": [string],
    "searchAfterOrEqual": [string],
    "searchBefore": [string],
    "searchBeforeOrEqual": [string]
}
```

</TabItem>

<TabItem value='example'>

```json
{
  "state": "CREATED",
  "assigned": true,
  "assignee": "string",
  "taskDefinitionId": "string",
  "candidateGroup": "string",
  "candidateUser": "string",
  "processDefinitionKey": "string",
  "processInstanceKey": "string",
  "pageSize": 0,
  "followUpDate": {
    "from": "2023-03-29T18:38:10.491Z",
    "to": "2023-03-29T18:38:10.491Z"
  },
  "dueDate": {
    "from": "2023-03-29T18:38:10.491Z",
    "to": "2023-03-29T18:38:10.491Z"
  },
  "sort": [
    {
      "field": "completionTime",
      "order": "ASC"
    }
  ],
  "searchAfter": ["string"],
  "searchAfterOrEqual": ["string"],
  "searchBefore": ["string"],
  "searchBeforeOrEqual": ["string"]
}
```

</TabItem>
</Tabs>

### Fields

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>state</b></code>](#)<Bullet />[`TaskState`](../enums/task-state.mdx) <Badge class="secondary" text="enum"/>

> State of the tasks

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>assigned</b></code>](#)<Bullet />`boolean`

> Are the tasks assigned?

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>assignee</b></code>](#)<Bullet />`string`

> Who is assigned to the tasks?

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>taskDefinitionId</b></code>](#)<Bullet />`string`

> Task definition ID - what's the BPMN flow node?

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>candidateGroup</b></code>](#)<Bullet />`string`

> Given group is in candidate groups list.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>candidateUser</b></code>](#)<Bullet />`string`

> Given group is in candidate user list.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>processDefinitionKey</b></code>](#)<Bullet />`string`

> Reference to process definition
> (renamed equivalent of [`TaskQuery.processDefinitionId`](docs/apis-tools/tasklist-api/inputs/task-query.mdx#code-style-fontweight-normal-taskquerybprocessdefinitionidbcodestring-) field).

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>processInstanceKey</b></code>](#)<Bullet />`string`

> Reference to process instance
> (renamed equivalent of [`TaskQuery.processInstanceId`](docs/apis-tools/tasklist-api/inputs/task-query.mdx#code-style-fontweight-normal-taskquerybprocessinstanceidbcodestring-) field).

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>followUpDateDate</b></code>](#)<Bullet />[`DateFilter`](../models/date-filter-input.mdx)

> Specifying a range of follow-up dates for the tasks to search for.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>dueDate</b></code>](#)<Bullet />[`DateFilter`](../models/date-filter-input.mdx)

> Specifying a range of due dates for the tasks to search for.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>sort</b></code>](#)<Bullet />[`TaskOrderBy`](../models/task-order-by.mdx) <Badge class="secondary" text="list"/>

> An array of objects specifying the fields to sort the results by.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>pageSize</b></code>](#)<Bullet />`int`

> Size of tasks page (default: 50).

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>searchAfter</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly after this values plus same sort values.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>searchAfterOrEqual</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly after this values.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>searchBefore</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly before this values plus same sort values.

#### [<code style={{ fontWeight: 'normal' }}>TaskSearchRequest.<b>searchBeforeOrEqual</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly before this values.

### Consumed by

[`Search tasks`](/docs/apis-tools/tasklist-api-rest/controllers/tasklist-api-rest-task-controller.md#search-tasks) <Badge class="secondary" text="POST"/>
